# rust_time_tracker

./: Cargo.toml  time_tracker_data.json
src/: main.rs
